welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: ':' expected but ')' found.
def printColonne(T:Array[Color],decalage:Int,taille) {
                                                   ^Array2:39: error: identifier expected but '}' found.
}
^